src/libACQ/Ni/Include/Flexmotn.h



//Set Stepper Loop Mode
FLEXFUNC flex_set_stepper_loop_mode(BOARD, u8 axis, u16 loopMode);