src/libACQ/Ni/Include/FLEXMOTN.BAS


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' FlexMotion Compatibility functions (Not Recommended for use) - for compatibility only
' Refer to the function reference manual and use the newer functions that have
' replaced these
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
Declare Function flex_enable_encs Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal enabledencs%) As Long
Declare Function flex_load_2d_arc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal Radius&, ByVal StartAngle&, ByVal travelAngle&, ByVal inpvect%) As Long
Declare Function flex_load_3d_arc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal Radius&, ByVal planePitch&, ByVal planeYaw&, ByVal StartAngle&, ByVal travelAngle&, ByVal inpvect%) As Long
Declare Function flex_load_helix Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal Radius&, ByVal StartAngle&, ByVal travelAngle&, ByVal linearTravel&, ByVal inpvect%) As Long
Declare Function flex_enable_gear Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal gearMap%) As Long
Declare Function flex_acq_traj_data Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal axisMap%, ByVal numsamps%, ByVal timePeriod%) As Long
Declare Function flex_read_traj_data Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
'Read Trajectory Data
'  Input parameters:
'                  boardID ( 1 - 32)
'                  device
'                  an array of longs (of size 12)
'  Return Value :  0 - Success ( retdata points to an array of 12 longs )
'                 >0 - Error Code (refer to Errors.doc)
Declare Function flex_read_traj_data_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, rettraj&) As Long
Declare Function flex_read_rs_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_rs_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, runstatus%) As Long
Declare Function flex_read_motoff_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_motoff_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, offstatus%) As Long
Declare Function flex_read_dac_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_dac_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, status%) As Long
Declare Function flex_load_loop_params Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, pidvalues As PidVals, ByVal inpvect%) As Long
Declare Function flex_load_kp Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal kp%, ByVal inpvect%) As Long
Declare Function flex_load_ki Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal ki%, ByVal inpvect%) As Long
Declare Function flex_load_ilim Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal ilim%, ByVal inpvect%) As Long
Declare Function flex_load_kd Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal kd%, ByVal inpvect%) As Long
Declare Function flex_load_td Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal td%, ByVal inpvect%) As Long
Declare Function flex_load_kv Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal kv%, ByVal inpvect%) As Long
Declare Function flex_load_aff Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal aff%, ByVal inpvect%) As Long
Declare Function flex_load_vff Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal vff%, ByVal inpvect%) As Long
Declare Function flex_load_accel Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal accel&, ByVal inpvect%) As Long
Declare Function flex_load_decel Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal decel&, ByVal inpvect%) As Long
Declare Function flex_load_accel_rpsps Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal RPSPS#, ByVal inpvect%) As Long
Declare Function flex_load_decel_rpsps Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal RPSPS#, ByVal inpvect%) As Long
Declare Function flex_load_vel_override Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal overridescale%, ByVal inpvect%) As Long
Declare Function flex_stop Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal axisMap%) As Long
Declare Function flex_halt Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal axisMap%) As Long
Declare Function flex_kill Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal axisMap%) As Long
Declare Function flex_enable_lims Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal limmap%) As Long
Declare Function flex_enable_sw_lims Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal swlimmap%) As Long
Declare Function flex_read_lim_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_lim_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, limstatus%) As Long
Declare Function flex_read_sw_lim_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_sw_lim_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, swlimstatus%) As Long
Declare Function flex_read_pos_bp_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_pos_bp_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, bpstatus%) As Long
Declare Function flex_read_at_bp_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_at_bp_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, status%) As Long
Declare Function flex_save_object Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%) As Long
Declare Function flex_delete_object Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%) As Long
Declare Function flex_free_object Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%) As Long
Declare Function flex_wait Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal cc%, ByVal mustOn%, ByVal mustOff%, ByVal timeout%, ByVal retvect%) As Long
Declare Function flex_wait_or Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal cc%, ByVal mustOn%, ByVal mustOff%, ByVal timeout%, ByVal retvect%) As Long
Declare Function flex_set_home_pol Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal homepol%) As Long
Declare Function flex_enable_homes Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal homeMap%) As Long
Declare Function flex_set_lim_pol Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal polarity%) As Long
Declare Function flex_set_inhib_momo Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal mustOn%, ByVal mustOff%) As Long
Declare Function flex_config_inhibs Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal axisMap%, ByVal polmap%) As Long
Declare Function flex_read_home_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_home_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, homeStatus%) As Long
Declare Function flex_read_vel_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_vel_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, status%) As Long
Declare Function flex_insert_label Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal labelnum%) As Long
Declare Function flex_jump_label Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal cc%, ByVal mustOn%, ByVal mustOff%, ByVal labelnum%) As Long
Declare Function flex_read_boot_ver_rtn Lib "FlexMotion32.dll" (ByVal boardID%, bootver&) As Long
Declare Function flex_read_firm_ver_rtn Lib "FlexMotion32.dll" (ByVal boardID%, firmver&) As Long
Declare Function flex_read_dsp_ver_rtn Lib "FlexMotion32.dll" (ByVal boardID%, dspver&) As Long
Declare Function flex_read_fpga_ver_rtn Lib "FlexMotion32.dll" (ByVal boardID%, fpgaver&) As Long
Declare Function flex_load_vel_thresh Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal velthresh&, ByVal inputVector%) As Long
Declare Function flex_load_vel Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal velocity&, ByVal inputVector%) As Long
Declare Function flex_read_vel Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal returnVector%) As Long
Declare Function flex_read_vel_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, velocity&) As Long
Declare Function flex_read_vel_thresh_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal returnVector%) As Long
Declare Function flex_read_vel_thresh_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, velocityThresholdStatus%) As Long
Declare Function flex_set_port_dir Lib "FlexMotion32.dll" (ByVal boardID%, ByVal port%, ByVal Direction%) As Long
Declare Function flex_load_counts_rev Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal counts%) As Long
Declare Function flex_load_steps_rev Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal steps%) As Long

Declare Function flex_read_err_msg_rtn Lib "FlexMotion32.dll" (ByVal boardID%, commandID%, resource%, errorCode%) As Long
Declare Function flex_enable_bp Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal enableModee%, ByVal actionOnBreakpoint%) As Long
Declare Function flex_set_hs_cap_pol Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal highSpeedCapturePolarity%) As Long
Declare Function flex_enable_hs_caps Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal captureMapp%) As Long


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''''''''''''  THESE FUNCTIONS ARE COMPATIBILITY, BUT NOT REPLACEd BY A NEW FUNCTION ''''''''''''''
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
Declare Function flex_read_raw_vel Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal retvect%) As Long
Declare Function flex_read_raw_vel_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, rawvel&) As Long
'Use flex_set_stepper_loop_mode()
Declare Function flex_set_axis_mode Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal axismode%) As Long

